[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpsmatcher"
version = "0.1.0"
authors = [
  { name="Bonnetain Loïc", email="loic.bonnetain@univ-eiffel.fr" },
]
description = "Match a trace of GPS positions to a transportation graph"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lbonnetain/gpsmatcher"
Issues = "https://github.com/lbonnetain/gpsmatcher/issues"