[metadata]
name = gpsmatcher
version = attr: gpsmatcher.__version__
author = Loïc Bonnetain
description = Match a trace of GPS positions to a transportation graph
license = GPL-3.0
long_description = file: README.md
url = https://github.com/lbonnetain/gpsmatcher
project_urls =
    Bug Tracker = https://github.com/lbonnetain/gpsmatcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
keywords = map, matching, GPS, gpsmatcher

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
    numba
    networkx
    geopandas
    pygeohash
    pygeohash_fast
    joblib
    scipy
    
dependency_links = https://github.com/wdm0006/pygeohash
